Add user delete and user register apis
